@@ -1,3 +1,6 @@
+* #3364: When joining an activity, pick up its sharing scope, so we don't
+  try to re-share already shared activities in order to invite someone (smcv)
+
 Snapshot 8b784a6223
 
 * #3339 Add default mime types handler to the shell. (marco)
